--- a/front/Web App AS/package.json
+++ b/front/Web App AS/package.json
@@ -13,7 +13,11 @@
     "postgre": "^0.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.3"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.6.3",
+    "react-toastify": "^11.0.5",
+    "reactjs-popup": "^2.0.6",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
