--- a/front/Web App AS/package.json
+++ b/front/Web App AS/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.0",
+    "passport-google-oauth20": "^2.0.0",
     "postgre": "^0.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
